--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
+server.port=8001
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
 spring.datasource.username=root
 spring.datasource.password=pass@word1
-
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
